--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular.io-example",
+  "name": "mhc",
   "version": "0.0.0",
   "description": "Example project from an angular.io guide.",
   "license": "MIT",
@@ -8,22 +8,30 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "format": "npm run format:prettier",
+    "format:prettier": "prettier --write src/app/**/*.{ts,html,css}",
     "test": "ng test",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.2",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.2.2",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@types/d3": "^7.4.0",
     "angular-in-memory-web-api": "~0.14.0",
+    "bootstrap": "^5.2.1",
+    "d3": "^7.6.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -32,6 +40,8 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^16.11.35",
+    "@types/uuid": "^8.3.4",
+    "@types/d3": "^7.4.0",
     "copyfiles": "^2.4.1",
     "jasmine-core": "~4.3.0",
     "jasmine-marbles": "~0.9.2",
@@ -41,6 +51,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "^2.7.1",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.0",
     "typescript": "~4.8.0"
